# sktime-agentic-forecaster

./: .gitignore  LICENSE  README.md  notebook_cells.txt  pyproject.toml  test_local.py
examples/: demo.ipynb  demo1.ipynb
sktime_agent/: __init__.py  forecaster.py  llm_backend.py  pipeline_builder.py  prompts.py  registry.py  result.py
tests/: test_forecaster.py
