[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "sktime-agentic-forecaster"
version = "0.1.0"
description = "LLM-powered forecasting agent built on sktime"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
keywords = ["time-series", "forecasting", "llm", "sktime", "agents"]
dependencies = [
    "sktime>=0.24.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
openai     = ["openai>=1.0.0"]
anthropic  = ["anthropic>=0.20.0"]
gemini     = ["google-generativeai>=0.4.0"]
langchain  = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "google-generativeai>=0.4.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "jupyter",
    "notebook",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/mohammedfirdouss/sktime-agentic-forecaster"
Issues   = "https://github.com/sktime/sktime/issues/9721"

[tool.setuptools.packages.find]
where   = ["."]
include = ["sktime_agent*"]
